[package]
name = "bl-control"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "fs", "io-util"] }
clap = { version = "4.0", features = ["derive"] }
clap-num = "1.0.2"

